--- a/2_Practice_Assigments/2_Fix_Identation/partI.html
+++ b/2_Practice_Assigments/2_Fix_Identation/partI.html
@@ -4,6 +4,9 @@
         <title>
             Basic I
         </title>
+        <style>
+            *{ background-color: brown;}
+        </style>
     </head>
     <body>
         <h1>
