--- a/3_Examples/Example_03082023_Indentation/Identation.html
+++ b/3_Examples/Example_03082023_Indentation/Identation.html
@@ -4,8 +4,8 @@
         <title> ¡Hola, mundo! </title>
     </head>
     <body>
-        <h1> Aquí hay una etiqueta de encabezado </h1>
-        <p> Ahora, una etiqueta de párrafo </p>
+        <h1 id="page_title">My First Website!</h1>
+        <p class="sub_title">This is <span style="color:blue" class="emphasize" >Cool!</span></p>
     </body>
 </html>
 
