New Changes 06-08-2023 07:19 pm

--- a/1_Core_Assigments/Formulario_de_registro/formulario_de_registro.html
+++ b/1_Core_Assigments/Formulario_de_registro/formulario_de_registro.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style.css" >
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Borel&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Preahvihear&display=swap" rel="stylesheet">
     </head>
     <body>
             
@@ -82,10 +82,6 @@
 
             <div>
                 <p>*Indicates a required field</p>
-            </div>
-
-            <div>
-                <output name="PeriodicEmailUpdates"></output>
             </div>
             
         </form>
