New Changes 06-08-2023 11:25 pm

--- a/3_Examples/Exampl_06082023_HTML_CSS_ALLINGMENT/Test.html
+++ b/3_Examples/Exampl_06082023_HTML_CSS_ALLINGMENT/Test.html
@@ -8,13 +8,23 @@
 
     div{       display: inline;
         vertical-align: top;}
+    /* * {   outline: 1px solid red;} */
+
+    body{outline: 1px solid yellowgreen}
+    .contenier1{
+        outline: 1px solid aqua
+        
+    }
+
 
     </style>
+
+
 </head>
 <body>
-    <div>
+    <div >
         <br>
-        <div><label FOR="message">Message: </label></div>
+        <div class="contenier1"><label FOR="message">Message: </label></div>
         <div><textarea id="message" name="message" cols="35" rows="3"></textarea></div>
         
     </div>
