New Changes 06-08-2023 11:26 pm

--- a/2_Practice_Assigments/4_Styling/Styling.html
+++ b/2_Practice_Assigments/4_Styling/Styling.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <DIV class="container1"><h1>My<span style="color:aqua">Cloud</span></h1></DIV>
-    <DIV class="container2"><h2>Completed Projects</h2></DIV>
+    <DIV class="container2"><h2>Completed Projects:</h2></DIV>
     <DIV class="container3"><h3>Contact Us</h3></DIV>
 
 </body>
