--- a/1_Core_Assigments/Plotting_Our_Blocks/Plotting_Our_Blocks_Way2/Index.html
+++ b/1_Core_Assigments/Plotting_Our_Blocks/Plotting_Our_Blocks_Way2/Index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Posición de práctica</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
 <body>
     <div class="container">
@@ -17,4 +19,3 @@
     </div>
 </body>
 </html>
-
