New Changes 13-08-2023 4:53 pm

--- a/3_Examples/Example_life/Index.html
+++ b/3_Examples/Example_life/Index.html
@@ -5,19 +5,11 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="top-nav"></div>
-        <div class="row">
-            <div class="side-nav"></div>
-            <div class="main">
-                <div class="row">
-                    <div class="sub-content"></div>
-                    <div class="sub-content"></div>
-                    <div class="sub-content"></div>
-                </div>
-                <div id="advertisement"></div>
-            </div>
-        </div>
+    <div id="dojo">
+        <img src="blue.png" alt="blue ninja" >
+        <img src="green.png" alt="green ninja" >
+        <img src="purple.png" alt="purple ninja" >
+        <img src="red.png" alt="red ninja" >
     </div>
 </body>
 </html>
