New Changes 14-08-2023 10:53 am

--- a/3_Examples/Example_life/Index.html
+++ b/3_Examples/Example_life/Index.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Posición de práctica</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Preahvihear&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+  <title>Document</title>
+
 </head>
 <body>
-    <div class="row">
-        <div class="col">1/4</div>
-        <div class="col">1/4</div>
-        <div class="col">1/4</div>
-        <div class="col">1/4</div>
+  <div class="ContainerParent">
+    <div id="ContainerChildTop"></div>
+    <div id="ContainerChildBottom">
+      <img id="Usercircle" src="user-circle.png" alt="user-circle">
+      <h1>Jane Doe</h1>
+      <img id="MapMarker" src="map-marker.png" alt="map-marker">
+      <a id="Location" href="https://www.google.com/maps/place/Seattle,+WA,+USA/@47.6129104,-122.5068714,11z/data=!3m1!4b1!4m6!3m5!1s0x5490102c93e83355:0x102565466944d59a!8m2!3d47.6062095!4d-122.3320708!16zL20vMGQ5anI?entry=ttu">Seattle</P>
+      <div id="Description"><p> Developer | Engineer | Problem Solver</p>
+        <p> Master of shadows and the internet!</p>
+      </div>  
+        <img id="gear" src="gear.png" alt="gear">
+      
+        <a id="editprofile" href="https://github.com/polivares/CD-WebFundamentals">edit profile </a>
     </div>
-    <div class="row">
-        <div class="col">1/3</div> 
-        <div class="col-2">2/3</div>
-    </div>
-    <div class="row">
-        <div class="col-2">2/5</div>
-        <div class="col-3">3/5</div>
-    </div>    
+  </div>
 </body>
 </html>
-
-
 
