--- a/3_Examples/Example_life/Index.html
+++ b/3_Examples/Example_life/Index.html
@@ -17,7 +17,7 @@
       <img id="Usercircle" src="user-circle.png" alt="user-circle">
       <h1>Jane Doe</h1>
       <img id="MapMarker" src="map-marker.png" alt="map-marker">
-      <a id="Location" href="https://www.google.com/maps/place/Seattle,+WA,+USA/@47.6129104,-122.5068714,11z/data=!3m1!4b1!4m6!3m5!1s0x5490102c93e83355:0x102565466944d59a!8m2!3d47.6062095!4d-122.3320708!16zL20vMGQ5anI?entry=ttu">Seattle</P>
+      <a id="Location" href="https://www.google.com/maps/place/Seattle,+WA,+USA/@47.6129104,-122.5068714,11z/data=!3m1!4b1!4m6!3m5!1s0x5490102c93e83355:0x102565466944d59a!8m2!3d47.6062095!4d-122.3320708!16zL20vMGQ5anI?entry=ttu">Seattle</a>
       <div id="Description"><p> Developer | Engineer | Problem Solver</p>
         <p> Master of shadows and the internet!</p>
       </div>  
