New Changes 17-08-2023 1:03 pm

--- a/3_Examples/Example_Adding_LI_js/Index.html
+++ b/3_Examples/Example_Adding_LI_js/Index.html
@@ -13,8 +13,8 @@
       <div id="container1">
         <h1>Formulario de ingreso</h1>
         <input type="text" id="name" name="name" placeholder="Ingrese nombre de persona">
-        <button id="boton">Agregar Nombre</button> <!--Esta es la funcion que se conecta automaticamente con JS -->
-        <!-- <button id="boton" onclick="kev">Agregar Nombre</button> --> <!--Esta es la opcion hibrida en donde llamamos la funcion adentro del archivo js-->
+        <!-- <button id="boton">Agregar Nombre</button> Esta es la funcion que se conecta automaticamente con JS -->
+        <button id="boton" onclick='kev()'>Agregar Nombre</button> <!--Esta es la opcion hibrida en donde llamamos la funcion adentro del archivo js-->
       </div>
       <div id="container2">
         <h1>Listado de personas</h1>
