New Changes 17-08-2023 1:03 pm

--- a/1_Core_Assigments/Onclick_event/index.html
+++ b/1_Core_Assigments/Onclick_event/index.html
@@ -24,7 +24,7 @@
           <h3>noun</h3>
           <h4>Plural: ninjas</h4>
           <div class="containerbuttons" >
-            <button id="btn3" onclick="ninjalike(this)">13 Likes</button>
+            <button id="btn3" onclick="ninjalike(this)">0 Likes</button>
           </div>
 
         </div>
@@ -38,7 +38,7 @@
           <h3>noun</h3>
           <h4>Plural: ninjas</h4>
           <div class="containerbuttons">
-            <button id="btn4" onclick="ninjalike(this)">13 Likes</button>
+            <button id="btn4" onclick="ninjalike2(this)">0 Likes</button>
           </div>
 
         </div>
