--- a/3_Examples/Example_life/Index.html
+++ b/3_Examples/Example_life/Index.html
@@ -11,48 +11,7 @@
   <script src="script.js"></script>
 </head>
 <body>
-  <header class="div1">
-    <h1>Dojonary</h1>
-    <input type="text" id="Searchname" name="Searchname" placeholder=" Search">
-    <button id="btn" onclick="loginbtn(this)">Login</button>
-  </header>
-  <main>
-    <div class="div2">
-      <div class="div2a">
-        <div class="div2a1">
-          <h1>ninja</h1>
-          <h3>noun</h3>
-          <h4>Plural: ninjas</h4>
-          <div class="containerbuttons" >
-            <button id="btn3" onclick="ninjalike(this)">13 Likes</button>
-          </div>
-
-        </div>
-        <div class="div2a2">
-          <h3>A practitioner skilled in the <a href="xx">Japanese</a> art of <a href="xx">ninjutsu</a></h3>
-        </div>
-      </div>
-      <div class="div2b">
-        <div class="div2b1">
-          <h1>ninja</h1>
-          <h3>noun</h3>
-          <h4>Plural: ninjas</h4>
-          <div class="containerbuttons">
-            <button id="btn4" onclick="ninjalike(this)">13 Likes</button>
-          </div>
-
-        </div>
-        <div class="div2b2">
-          <h3>A <a href="xx">Programmer</a> who braks down problems with <a href="xx">zen</a>-like focus</h3>
-        </div>
-      </div>
-    </div>
-    <div class="div3">
-      <div class="div3a">
-        <h2>Dojonary is define by <span style="font-size: larger;" >YOU</span></h2>
-        <button id="btn2" onclick="adddefinitionbtn(this)">Add Definition</button>
-      </div>
-    </div>
-  </main>
+  <h1>Dojo Notes</h1>
+  <div class="block" onmouseover="over(this)" onmouseout="out(this)"></div>  </div>
 </body>
 </html>
