New Changes 18-08-2023 11:23 pm

--- a/3_Examples/Example_DOM_PickCat_PickDog/Index.html
+++ b/3_Examples/Example_DOM_PickCat_PickDog/Index.html
@@ -12,10 +12,14 @@
 </head>
 <body>
 
-    <button class="dark-mode" onclick="setActive(this)">Cambiar al modo oscuro</button>
+  <h1>Cat vs Doc</h1>
+  <img id="fav-animal" src="images/anne-s.jpg" alt="fav animal">
+  <div class="colora">
+  <button id="btn1" onclick="pickcat(this)">Pick Cat</button>
+  <button id="btn2" onclick="pickdog(this)">Pick Dog</button>
+</div>
 
 <script src="script.js"></script>
-
 </body>
 
 </html>
