--- a/3_Examples/Example_DOM_counter_platform/Index.html
+++ b/3_Examples/Example_DOM_counter_platform/Index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CatvsDog</title>
+  <title>My Epic Counter</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Preahvihear&display=swap" rel="stylesheet">
@@ -11,11 +11,10 @@
 
 </head>
 <body>
-
-    <button class="dark-mode" onclick="setActive(this)">Cambiar al modo oscuro</button>
-
-<script src="script.js"></script>
-
+  <p id="count">The count is 1</p>
+  <button onclick="add1()">+</button>
+  <button onclick="substrac1()">-</button>
+  <script src="script.js"></script>
 </body>
 
 </html>
